--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,8 @@ go:
   - 1.7
   - tip
 
-script: go test -v
+script:
+  - go test -race -coverprofile=coverage.txt -covermode=atomic
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
